MeshExample revisited